# huffman

./: CMakeLists.txt
console/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.h
test/: huffmanTest.cpp
